# pokemon-fastapi

./: README.md
pokemon-fastapi/: .env  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
pokemon-fastapi/alembic/: env.py
pokemon-fastapi/alembic/versions/: 84b337efce47_create_pokemon_table.py  e922cde22460_create_pokemon_table.py
pokemon-fastapi/app/api/v1/: routers.py
pokemon-fastapi/app/api/v1/endpoints/: pokemons.py
pokemon-fastapi/app/core/: config.py  db.py  init_db.py
pokemon-fastapi/app/models/: pokemon.py
pokemon-fastapi/app/repositories/: base.py  pokemon_repository.py
pokemon-fastapi/app/schemas/: pokemon.py
pokemon-fastapi/app/services/: pokemon_service.py
pokemon-fastapi/src/pokemon_fastapi/: __init__.py
