[project]
name = "pokemon-fastapi"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi>=0.111.1",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.31",
    "httpx>=0.27.0",
    "uvicorn>=0.30.3",
    "pydantic>=2.8.2",
    "alembic>=1.13.2",
    "pydantic-settings>=2.3.4",
    "pre-commit>=3.7.1",
    "greenlet>=3.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pokemon_fastapi"]
